# AuraWrite

./: .gitignore  AGENTS.md  README.md  SUGGESTIONS_SPEC.md  TEST_FEATURES.md  TEST_PLAN.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
documentation/: 00-INDICE.md  01-STATO.md  02-TODO.md  03-ARCHITETTURA.md  03-SQLITE-STATUS.md  04-LEZIONI.md  05-DEVGUIDE.md  DEBUG-SESSION-2026-04-11.md  REFERENZA-Tauri-SQLite-VectorDB.md
documentation/.obsidian/: workspace.json
documentation/archivio/: 01-fasi.sync-conflict-20260330-121740-NVBZUEW.md  AI_PROPOSTE_BUG_SUGGESTIONS.md  FILE_OPS.md  INDEX.sync-conflict-20260330-121736-NVBZUEW.md  LESSONS_LEARNED.md  PIANO_IMPLEMENTAZIONE.md  PIANO_SUGGESTIONS_IMPLEMENTAZIONE.md  RESUME_MEMO.md  STATO.md  SUGGESTIONS_SPEC.md  aurawrite___ai_writing_assistant_3lo.json
documentation/feature/: ai-assistant-panel.md  database.md  pagination.md  suggestions-panel.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  embeddings.rs  lib.rs  main.rs
src/ai-panel/: ai-manager.ts  chat.ts  chunks.ts  edit-executor.ts  edit-parser.ts  entity-extraction.ts  modification-hub.ts  ollama-provider.ts  operations.ts  providers.ts  remote-providers.ts  suggestions-panel.ts  tools.ts
src/database/: db.ts
src/editor/: chunk-decorations.ts  color-picker.ts  editor.ts  fake-pagination.ts  find-replace.ts  page-break-plugin.ts  page-break-widget.ts  pagination.ts  project-panel.ts  (+4 more)
(+19 files in other folders)
